basilisk-testnet/relaychains/relaychain.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hydra-ui-test
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hydra-ui-test
  name: validator01-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: relaychain-validator01
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: relaychain-validator01
    spec:
      containers:
      - image: 601305236792.dkr.ecr.eu-west-1.amazonaws.com/relaychain-test:0.9.9-1-8e643e660
        resources:
          limits:
            memory: "5000Mi"
            cpu: "3000m"
          requests:
            memory: "4000Mi"
            cpu: "3000m"
        imagePullPolicy: Always
        name: relaychain-validator01
        volumeMounts:
          - mountPath: /tmp
            name: persistent-storage
        command: ["/polkadot/polkadot"]
        args: ["--chain", "/tmp/westend-live.json", "--base-path", "/polkadot", "--validator", "--node-key", "0000000000000000000000000000000000000000000000000000000000000001", "--keystore-path", "/tmp/keystore-v1", "--unsafe-ws-external", "--rpc-cors", "all", "--unsafe-rpc-external", "--rpc-methods", "Unsafe"]
        ports:
        - containerPort: 9944
        - containerPort: 30333
      volumes:
        - name: persistent-storage
          persistentVolumeClaim:
            claimName: efs-pv  
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hydra-ui-test
  name: validator02-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: relaychain-validator02
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: relaychain-validator02
    spec:
      containers:
      - image: 601305236792.dkr.ecr.eu-west-1.amazonaws.com/relaychain-test:0.9.9-1-8e643e660
        resources:
          limits:
            memory: "5000Mi"
            cpu: "3000m"
          requests:
            memory: "4000Mi"
            cpu: "3000m"
        imagePullPolicy: Always
        name: relaychain-validator02
        volumeMounts:
          - mountPath: /tmp
            name: persistent-storage
        command: ["/polkadot/polkadot"]
        args: ["--chain", "/tmp/westend-live.json", "--base-path", "/polkadot", "--validator", "--node-key", "0000000000000000000000000000000000000000000000000000000000000002", "--keystore-path", "/tmp/keystore-v2", "--unsafe-ws-external", "--rpc-cors", "all", "--unsafe-rpc-external", "--rpc-methods", "Unsafe"]
        ports:
        - containerPort: 9944
        - containerPort: 30333
      volumes:
        - name: persistent-storage
          persistentVolumeClaim:
            claimName: efs-pv  
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hydra-ui-test
  name: validator03-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: relaychain-validator03
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: relaychain-validator03
    spec:
      containers:
      - image: 601305236792.dkr.ecr.eu-west-1.amazonaws.com/relaychain-test:0.9.9-1-8e643e660
        resources:
          limits:
            memory: "5000Mi"
            cpu: "3000m"
          requests:
            memory: "4000Mi"
            cpu: "3000m"
        imagePullPolicy: Always
        name: relaychain-validator03
        volumeMounts:
          - mountPath: /tmp
            name: persistent-storage
        command: ["/polkadot/polkadot"]
        args: ["--chain", "/tmp/westend-live.json", "--base-path", "/polkadot", "--validator", "--node-key", "0000000000000000000000000000000000000000000000000000000000000003", "--keystore-path", "/tmp/keystore-v3", "--unsafe-ws-external", "--rpc-cors", "all", "--unsafe-rpc-external", "--rpc-methods", "Unsafe"]
        ports:
        - containerPort: 9944
        - containerPort: 30333
      volumes:
        - name: persistent-storage
          persistentVolumeClaim:
            claimName: efs-pv  
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hydra-ui-test
  name: validator04-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: relaychain-validator04
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: relaychain-validator04
    spec:
      containers:
      - image: 601305236792.dkr.ecr.eu-west-1.amazonaws.com/relaychain-test:0.9.9-1-8e643e660
        resources:
          limits:
            memory: "5000Mi"
            cpu: "3000m"
          requests:
            memory: "4000Mi"
            cpu: "3000m"
        imagePullPolicy: Always
        name: relaychain-validator04
        volumeMounts:
          - mountPath: /tmp
            name: persistent-storage
        command: ["/polkadot/polkadot"]
        args: ["--chain", "/tmp/westend-live.json", "--base-path", "/polkadot", "--validator", "--node-key", "0000000000000000000000000000000000000000000000000000000000000004", "--keystore-path", "/tmp/keystore-v4", "--unsafe-ws-external", "--rpc-cors", "all", "--unsafe-rpc-external", "--rpc-methods", "Unsafe"]
        ports:
        - containerPort: 9944
        - containerPort: 30333
      volumes:
        - name: persistent-storage
          persistentVolumeClaim:
            claimName: efs-pv  
---
apiVersion: v1
kind: Service
metadata:
  namespace: hydra-ui-test
  name: validator01-svc
spec:
  ports:
    - port: 9944
      name: websocket
      targetPort: 9944
      protocol: TCP
    - port: 30333
      name: custom-port
      targetPort: 30333
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: relaychain-validator01
---
apiVersion: v1
kind: Service
metadata:
  namespace: hydra-ui-test
  name: validator02-svc
spec:
  ports:
    - port: 80
      name: websocket
      targetPort: 9944
      protocol: TCP
    - port: 30333
      name: custom-port
      targetPort: 30333
      protocol: TCP
    - port: 9615
      name: prom-port
      targetPort: 9615
      protocol: TCP   
  type: NodePort
  selector:
    app.kubernetes.io/name: relaychain-validator02
---
apiVersion: v1
kind: Service
metadata:
  namespace: hydra-ui-test
  name: validator03-svc
spec:
  ports:
    - port: 9944
      name: websocket
      targetPort: 9944
      protocol: TCP
    - port: 30333
      name: custom-port
      targetPort: 30333
      protocol: TCP  
  type: NodePort
  selector:
    app.kubernetes.io/name: relaychain-validator03
---
apiVersion: v1
kind: Service
metadata:
  namespace: hydra-ui-test
  name: validator04-svc
spec:
  ports:
    - port: 9944
      name: websocket
      targetPort: 9944
      protocol: TCP
    - port: 30333
      name: custom-port
      targetPort: 30333
      protocol: TCP  
  type: NodePort
  selector:
    app.kubernetes.io/name: relaychain-validator04
